Timesheet/main/default/objects/Timesheet__c/fields/Absence_Hours__c.field-meta.xml
<CustomField>
    <fullName>Absence_Hours__c</fullName>
    <label>Absence Hours</label>
    <summarizedField>Timesheet_Line_Item__c.Duration__c</summarizedField>
    <summaryFilterItems>
        <field>Timesheet_Line_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Absence</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Timesheet_Line_Item__c.Absence_Category__c</field>
        <operation>notEqual</operation>
        <value>Holiday</value>
    </summaryFilterItems>
    <summaryForeignKey>Timesheet_Line_Item__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
    <inlineHelpText>Calculates total absence hours from absence entries on timesheets, excluding any logged Holiday hours.</inlineHelpText>
</CustomField>