Timesheet/main/default/objects/Timesheet__c/fields/Accrued_Hours__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Hours__c</fullName>
    <label>Accrued Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <inlineHelpText>Calculates accrued hours for approved timesheets by dividing Billable Hours by the employee's Accrual Divisor, applying only after the Accrual Start Date.</inlineHelpText>
</CustomField>