Timesheet/main/default/objects/Timesheet__c/fields/Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours__c</fullName>
    <label>Billable Hours</label>
    <summarizedField>Timesheet_Line_Item__c.Duration__c</summarizedField>
    <summaryFilterItems>
        <field>Timesheet_Line_Item__c.Billable__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Timesheet_Line_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Attendance</value>
    </summaryFilterItems>
    <summaryForeignKey>Timesheet_Line_Item__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>