Timesheet/main/default/objects/Timesheet__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Timesheet_Masters</relationshipName>
    <type>MasterDetail</type>
</CustomField>