Timesheet/main/default/objects/Timesheet__c/fields/Holiday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Hours__c</fullName>
    <label>Holiday Hours</label>
    <summarizedField>Timesheet_Line_Item__c.Duration__c</summarizedField>
    <summaryFilterItems>
        <field>Timesheet_Line_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Absence</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Timesheet_Line_Item__c.Absence_Category__c</field>
        <operation>equals</operation>
        <value>Holiday</value>
    </summaryFilterItems>
    <summaryForeignKey>Timesheet_Line_Item__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>