Timesheet/main/default/objects/Timesheet__c/fields/Met_Weekly_Hours__c.field-meta.xml
<CustomField>
    <fullName>Met_Weekly_Hours__c</fullName>
    <formula>IF(
        ISPICKVAL(Employee__r.Employment_Type__c , &quot;Full Time&quot;),
        Total_Hours__c &gt;= 40,
        IF(
        ISPICKVAL(Employee__r.Employment_Type__c, &quot;Part Time&quot;),
        Total_Hours__c &gt;= 20,
        IF(
        ISPICKVAL(Employee__r.Employment_Type__c, &quot;Internship&quot;),
        Total_Hours__c &gt;= 10,
        FALSE
        )
        )
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Met Weekly Hours</label>
    <type>Checkbox</type>
</CustomField>