Timesheet/main/default/objects/Timesheet__c/fields/Weekly_Goal_Completion__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Goal_Completion__c</fullName>
    <formula>CASE(
FLOOR(
( Total_Hours__c /
CASE(
WEEKDAY(Start_Date__c),
2, 5*8,
3, 4*8,
4, 3*8,
5, 2*8,
6, 1*8,
0
)
) * 5
),
0, &quot;⬜⬜⬜⬜⬜&quot;,
1, &quot;⬛⬜⬜⬜⬜&quot;,
2, &quot;⬛⬛⬜⬜⬜&quot;,
3, &quot;⬛⬛⬛⬜⬜&quot;,
4, &quot;⬛⬛⬛⬛⬜&quot;,
5, &quot;⬛⬛⬛⬛⬛&quot;,
&quot;⬛⬛⬛⬛⬛&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Goal Completion</label>
    <type>Text</type>
</CustomField>