Timesheet/main/default/objects/Timesheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>

    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>Weekly_Goal_Completion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>