Timesheet/main/default/objects/Timesheet__c/listViews/My_Timesheets.listView-meta.xml
<ListView>
    <fullName>My_Timesheets</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>

    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>Weekly_Goal_Completion__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Timesheets</label>
</ListView>