Timesheet/main/default/objects/Timesheet__c/listViews/This_Week_Timesheets.listView-meta.xml
<ListView>
    <fullName>This_Week_Timesheets</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week Timesheets</label>
</ListView>